# giffun

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  buildAndPack.yml
data/shaders/: TextureDiff.hlsl
encoder/: Cargo.toml
encoder/src/: lib.rs
encoder/src/capture/: frame_generator.rs  mod.rs
encoder/src/encoder/: capture_gif_encoder.rs  compositor.rs  diff.rs  lut.rs  quantizer.rs
encoder/src/util/: d3d.rs  mod.rs
shaders/: Cargo.toml  build.rs
shaders/src/: LUTGeneration.hlsl  LUTLookup_PS.hlsl  LUTLookup_VS.hlsl  lib.rs
src/: capture.rs  cli.rs  d3d.rs  diff.rs  encoder.rs  handle.rs  lut.rs  main.rs  palette.rs  quantizer.rs
src/capture/: enumeration.rs  mod.rs
src/encoder/: capture_gif_encoder.rs  compositor.rs  diff.rs  lut.rs  mod.rs  quantizer.rs
src/util/: dwm.rs  hotkey.rs  mod.rs  window_info.rs
