[package]
name = "giffun"
version = "0.1.0"
authors = ["robmikh <rob.mikh@outlook.com>"]
description = "An experimental gif encoder for Windows 10."
edition = "2021"

[dependencies]
gifencoder = { path = "encoder" }
clap = "2.33.3"

[dependencies.windows]
version = "0.28.0"
features = [
    "alloc",
    "Foundation",
    "System",
    "Win32_Foundation",
    "Win32_System_WinRT",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies.robmikh-common]
git = "https://github.com/robmikh/robmikh-common-rs"
#path = "../robmikh-common-rs"
rev = "b2d0a14384f4b0032a4d3b3d2e747e18493c4c95"
features = [
    "capture-desktop",
    "dispatcher-queue-desktop",
    "displays-desktop",
]

[profile.dev.package."*"]
opt-level = 3

[features]
debug = [
    "gifencoder/debug",
]
